syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "com.ownd_project.tw2023_wallet_android.datastore";
option java_multiple_files = true;

message CredentialSharingHistory {
  string rp = 1;
  string rp_name = 10;

  int32 accountIndex = 2;
  google.protobuf.Timestamp createdAt = 3;
  string credentialID = 4;
  repeated Claim claims = 5; // 提供された項目名

  string rp_location = 6;
  string rp_contact_url = 7;
  string rp_privacy_policy_url = 8;
  string rp_logo_url = 9;
}

message Claim {
    string name = 1;
    string value = 2;
    string purpose = 3;
}

message CredentialSharingHistories {
  repeated CredentialSharingHistory items = 1;
}
